# release-notes-formatter

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  aggregate_ticket_ids.py  commits.md  count_tags.py  count_tags_for_month.py  fetch_azure_ticket_details.py  format_prs_for_release.py  input.md  input_mock.md  main.py  output.md  output_mock.md  pull_and_format_github_release_notes.py  pull_commits_for_release.py  pull_prerelease.py  pyproject.toml  repos.yml  requirements.txt  sweep.yaml  test_count_tags_for_month.py  test_main.py  test_pull_prerelease.py  tickets.yml
.github/workflows/: test.yml  test_workflow.yml
release_notes/: __init__.py  conftest.py  exceptions.py  file_utils.py  models.py  parser.py
tests/: conftest.py  test_fetch_azure_ticket_details.py  test_main.py  test_models.py  test_parser.py  test_pull_and_format_github_release_notes.py  test_pull_prerelease.py
tests/fixtures/: sample_be_release_notes.md  sample_ui_release_notes.md
